Plugin: ExtraMenuFromWebservice: Fix z-index - refs BT#20442

--- a/plugin/extramenufromwebservice/resources/css/extramenufromwebservice.css
+++ b/plugin/extramenufromwebservice/resources/css/extramenufromwebservice.css
@@ -100,3 +100,6 @@
 #date_alt_text {
   z-index: 0; !important;
 }
+.input-group-btn:last-child > .btn, .input-group-btn:last-child > .btn-group {
+  z-index: 0; !important;
+}
